Added water to map, some bugfixes