@@ -1,6 +1,5 @@
 package agh.ics.oop.model;
 
-import java.io.FileNotFoundException;
 import java.util.*;
 
 public class GlobeMap implements WorldMap {
@@ -8,35 +7,112 @@ public class GlobeMap implements WorldMap {
     private final Map<Vector2d, Grass> grasses = new HashMap<>();
     private final Boundary boundary;
     private final Boundary equatorBoundary;
+    private final Map<Vector2d, Integer> waterSources = new HashMap<>(); // water source position and it's state of power
+    private final Set<Vector2d> waterPlaces = new HashSet<>();
+
+    private final int energyAddedAfterEatingGrass;
+    private final int breedingReadyAnimalEnergy;
+    private final int energyLostInReproduction;
+    private final int waterAreasMinSize;
+    private final int waterAreasMaxSize;
 
 
-    static Parameters parameters;
-    static {
-        try {
-            parameters = new Parameters();
-        } catch (FileNotFoundException e) {
-            throw new RuntimeException(e);
+    public GlobeMap(Parameters parameters) {
+        int mapHeight = parameters.MAP_HEIGHT;
+        int mapWidth = parameters.MAP_WIDTH;
+        int startAnimalNumber = parameters.START_ANIMAL_NUMBER;
+        int startAnimalEnergy = parameters.START_ANIMAL_ENERGY;
+        int grassStartAmount = parameters.GRASS_START_AMOUNT;
+        int waterAreasNumber = parameters.WATER_AREAS_NUMBER;
+
+        this.energyAddedAfterEatingGrass = parameters.ENERGY_ADDED_AFTER_EATING_GRASS;
+        this.breedingReadyAnimalEnergy = parameters.BREEDING_READY_ANIMAL_ENERGY;
+        this.energyLostInReproduction = parameters.ENERGY_LOST_IN_REPRODUCTION;
+
+        this.waterAreasMinSize = parameters.WATER_AREAS_MIN_SIZE;
+        this.waterAreasMaxSize = parameters.WATER_AREAS_MAX_SIZE;
+
+        this.boundary = new Boundary(new Vector2d(0,0), new Vector2d(mapWidth -1, mapHeight -1));
+        int equatorHeight = mapHeight / 5;
+        this.equatorBoundary = new Boundary(new Vector2d(0, mapHeight /2-equatorHeight/2), new Vector2d(mapWidth -1, mapHeight /2+equatorHeight/2-1));
+
+        placeGrasses(grassStartAmount);
+        placeInitialWaterSources(waterAreasNumber);
+        placeInitialAnimals(startAnimalNumber, startAnimalEnergy);
+    }
+
+    private void placeInitialWaterSources(int waterAreasToPlace) {
+        List<Vector2d> availablePlaces = new ArrayList<>();
+
+        for (int x = boundary.BOTTOM_LEFT().getX(); x <= boundary.TOP_RIGHT().getX(); x++) {
+            for (int y = boundary.BOTTOM_LEFT().getY(); y <= boundary.TOP_RIGHT().getY(); y++) {
+                availablePlaces.add(new Vector2d(x, y));
+            }
+        }
+
+        Collections.shuffle(availablePlaces);
+
+        for (int i = 0; i < waterAreasToPlace; i++) {
+            try {
+                Random random = new Random();
+                int waterLevel = random.nextInt(waterAreasMaxSize-waterAreasMinSize+1)+waterAreasMinSize;
+                waterSources.put(availablePlaces.get(i), waterLevel);
+            }
+            catch (Exception e) {
+                e.printStackTrace();
+            }
+        }
+
+        updateWater();
+    }
+
+    public void updateWater() {
+        waterPlaces.clear();
+        for (Vector2d position : waterSources.keySet()) {
+            // update water level
+            Random random = new Random();
+            int waterLevel = waterSources.get(position) + (random.nextInt(3) - 1); // +1 / 0 / -1
+            waterLevel = Math.min(Math.max(waterLevel,waterAreasMinSize),waterAreasMaxSize);
+            waterSources.put(position, waterLevel);
+
+            // update water places
+            for (int x = position.getX()-waterLevel+1; x <= position.getX()+waterLevel-1; x++) {
+                for (int y = position.getY()-waterLevel+1; y <= position.getY()+waterLevel-1; y++) {
+                    if (boundary.isInside(new Vector2d(x,y)) && Math.abs(x-position.getX()) + Math.abs(y-position.getY()) <= waterLevel-1) {
+                        Vector2d waterPosition = new Vector2d(x,y);
+                        waterPlaces.add(waterPosition);
+
+                        for (Animal animal : animalsAt(waterPosition)) {
+                            removeAnimal(animal);
+                        }
+                        if (grassAt(waterPosition) != null) {
+                            removeGrass(grassAt(waterPosition));
+                        }
+                    }
+                }
+            }
         }
     }
 
-    private static final int ENERGY_ADDED_AFTER_EATING_GRASS = parameters.ENERGY_ADDED_AFTER_EATING_GRASS;
-    private static final int START_ANIMAL_NUMBER = parameters.START_ANIMAL_NUMBER;
-    private static final int START_ANIMAL_ENERGY = parameters.START_ANIMAL_ENERGY;
-    private static final int BREEDING_READY_ANIMAL_ENERGY = parameters.BREEDING_READY_ANIMAL_ENERGY;
-    private static final int ENERGY_LOST_IN_REPRODUCTION = parameters.ENERGY_LOST_IN_REPRODUCTION;
+    public boolean isWaterAt(Vector2d position) {
+        return waterPlaces.contains(position);
+    }
 
+    private void placeInitialAnimals(int startAnimalNumber, int startAnimalEnergy) {
+        List<Vector2d> availablePlaces = new ArrayList<>();
 
-    public GlobeMap(int width, int height, int grassesStartAmount) {
-        this.boundary = new Boundary(new Vector2d(0,0), new Vector2d(width-1,height-1));
+        for (int x = boundary.BOTTOM_LEFT().getX(); x <= boundary.TOP_RIGHT().getX(); x++) {
+            for (int y = boundary.BOTTOM_LEFT().getY(); y <= boundary.TOP_RIGHT().getY(); y++) {
+                if (!waterSources.containsKey(new Vector2d(x,y)))
+                    availablePlaces.add(new Vector2d(x, y));
+            }
+        }
 
-        int equatorHeight = height / 5;
-        this.equatorBoundary = new Boundary(new Vector2d(0,height/2-equatorHeight/2), new Vector2d(width-1, height/2+equatorHeight/2-1));
+        Collections.shuffle(availablePlaces);
 
-        placeGrasses(grassesStartAmount);
-//        placeGrasses(grassesStartAmount);
-//        placeGrasses(grassesStartAmount);
-
-        createFirstAnimals();
+        for (int i = 0; i < startAnimalNumber; i++) {
+            placeAnimal(new Animal(availablePlaces.get(i), new Genes(), startAnimalEnergy));
+        }
     }
 
     public void placeGrasses(int grassesAmount) {
@@ -46,7 +122,7 @@ public class GlobeMap implements WorldMap {
         for (int x = boundary.BOTTOM_LEFT().getX(); x <= boundary.TOP_RIGHT().getX(); x++) {
             for (int y = boundary.BOTTOM_LEFT().getY(); y <= boundary.TOP_RIGHT().getY(); y++) {
                 Vector2d position = new Vector2d(x, y);
-                if (!grasses.containsKey(position)) {
+                if (!grasses.containsKey(position) && !waterPlaces.contains(position)) {
                     if (equatorBoundary.isInside(position))
                         availablePreferredPlaces.add(position);
                     else
@@ -110,6 +186,7 @@ public class GlobeMap implements WorldMap {
     public void move(Animal animal) {
         this.removeAnimal(animal);
         animal.move(boundary);
+        if (waterPlaces.contains(animal.getPosition())) animal.moveToPreviousPosition();
         this.placeAnimal(animal);
     }
 
@@ -127,7 +204,7 @@ public class GlobeMap implements WorldMap {
     @Override
     public ArrayList<Animal> animalsAt(Vector2d position) {
         if (animals.containsKey(position))
-            return animals.get(position);
+            return new ArrayList<>(animals.get(position));
         return new ArrayList<>();
     }
 
@@ -149,7 +226,7 @@ public class GlobeMap implements WorldMap {
 
             if (winningAnimal != null) {
                 grasses.remove(position);
-                winningAnimal.addEnergy(ENERGY_ADDED_AFTER_EATING_GRASS);
+                winningAnimal.addEnergy(energyAddedAfterEatingGrass);
             }
         }
     }
@@ -169,28 +246,12 @@ public class GlobeMap implements WorldMap {
         }
     }
 
-    private void createFirstAnimals() {
-        List<Vector2d> availablePlaces = new ArrayList<>();
-
-        for (int x = boundary.BOTTOM_LEFT().getX(); x <= boundary.TOP_RIGHT().getX(); x++) {
-            for (int y = boundary.BOTTOM_LEFT().getY(); y <= boundary.TOP_RIGHT().getY(); y++) {
-                availablePlaces.add(new Vector2d(x, y));
-            }
-        }
-
-        Collections.shuffle(availablePlaces);
-
-        for (int i = 0; i < START_ANIMAL_NUMBER; i++) {
-            placeAnimal(new Animal(availablePlaces.get(i), new Genes(), START_ANIMAL_ENERGY));
-        }
-    }
-
     private Animal findWinningAnimal(Vector2d position) {
         ArrayList<Animal> animalList = animalsAt(position);
         if (animalList.isEmpty()) {
             return null;
         }
-        Animal winningAnimal = animalList.get(0);
+        Animal winningAnimal = animalList.getFirst();
         for (Animal animal : animalList) {
             if (animal.winsFight(winningAnimal)) winningAnimal = animal;
         }
@@ -229,7 +290,7 @@ public class GlobeMap implements WorldMap {
             Animal parent2 = findWinningAnimal(position);
             placeAnimal(parent1);
 
-            if (parent1.getEnergy() >= BREEDING_READY_ANIMAL_ENERGY && parent2.getEnergy() >= BREEDING_READY_ANIMAL_ENERGY) {
+            if (parent1.getEnergy() >= breedingReadyAnimalEnergy && parent2.getEnergy() >= breedingReadyAnimalEnergy) {
 
                 Animal offspring = new Animal(
                         position,
@@ -238,10 +299,12 @@ public class GlobeMap implements WorldMap {
                                 parent2.getEnergy(),
                                 parent2.getGenes()
                         ),
-                        ENERGY_LOST_IN_REPRODUCTION * 2
+                        energyLostInReproduction * 2
                 );
-                parent1.removeEnergy(ENERGY_LOST_IN_REPRODUCTION);
-                parent2.removeEnergy(ENERGY_LOST_IN_REPRODUCTION);
+                parent1.removeEnergy(energyLostInReproduction);
+                parent1.addKid();
+                parent2.removeEnergy(energyLostInReproduction);
+                parent2.addKid();
 
                 placeAnimal(offspring);
             }
